# pipelines

./: .gitignore  README.md  docker-compose.dev.yaml  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: dependabot.yaml
.github/workflows/: deploy-restreamers.yml  deploy-worker.yml  deploy.api.staging.yml  deploy.fishtank.yml  deploy.restreamers.staging.yml  deploy.restreamers.yml  e2e-monitor.yml  e2e-test.yml  e2e.yml  monitor.yml  pr-agent.yml  preview.yml  test.yml  validate-code.yml
.husky/: pre-commit
apps/api/: .dockerignore  Cargo.toml  Dockerfile  api.production.toml  api.staging.toml  drizzle.config.ts  fly.toml  package.json  tsconfig.json
apps/api-legacy/: fly.toml
apps/api/drizzle/: 0000_spotty_shard.sql
apps/api/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/api/src/: app.ts  appState.ts  config.rs  config.ts  index.ts  main.rs  models.rs  state.rs
apps/api/src/db/: relations.ts  schema.ts
apps/api/src/handlers/: api.rs  api.ts  mod.rs  ws.rs
apps/api/src/plugins/: auth.ts  config.ts  cors.ts  database.ts  initialization.ts  prompt-manager.ts  redis.ts  sensible.ts  websocket.ts
apps/api/src/routes/: health.ts  prompts.ts  streams.ts  ws.ts
apps/api/src/services/: id.ts  initialization.ts  livepeer.ts  mod.rs  prompt-manager.ts  promptManager.ts  prompt_manager.rs  redis.rs  redis.ts  stream-api.ts  streamApi.ts  stream_api.rs  streams.ts
apps/api/src/types/: index.ts  models.ts
apps/api/test/plugins/: support.test.ts
apps/api/test/routes/: example.test.ts  root.test.ts
apps/app/: .env.example  .gitignore  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
apps/app-e2e/: .gitignore  package.json  playwright.config.dev.ts  playwright.config.prod.ts  playwright.config.ts
apps/daydream/: package.json
apps/docs/: mint.json
apps/fishtank/: Dockerfile  entrypoint.sh  fly.toml
apps/restreamers/: Dockerfile  (+6 more)
electron/: main.js
scripts/: upload-secrets.sh
tauri-wrapper/daydream-tauri-v1/src-tauri/: Cargo.toml  Daydream.entitlements  Info.plist  icon.icns  tauri.conf.json
tauri-wrapper/daydream-tauri-v1/src-tauri/capabilities/: default.json
tauri-wrapper/daydream-tauri-v1/src-tauri/icons/: icon.icns
tauri-wrapper/daydream-tauri-v1/src-tauri/infoplist/en.lproj/: InfoPlist.strings
tauri-wrapper/daydream-tauri-v1/src-tauri/src/: lib.rs  main.rs
tauri-wrapper/daydream-tauri-v1/src-tauri/src/virtual_camera/: macos.rs  mod.rs  obs_client.rs  windows.rs
ui-kit/: package.json  pnpm-lock.yaml
(+535 files in other folders)
