[package]
name = "daydream-tauri-v1"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "daydream_tauri_v1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Additional required plugins
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
url = "2.4"

# Async runtime
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "sync"] }

dirs = "5.0.1"  # For directories handling
once_cell = "1.19.0"  # For lazy static initialization

# WebSocket client for OBS
tokio-tungstenite = "0.20.1"  # WebSocket client
futures-util = "0.3.29"
uuid = { version = "1.6.1", features = ["v4"] }
sha2 = "0.10.8"  # For WebSocket auth
base64 = "0.21.7"  # For WebSocket auth

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.144"  # For macOS named pipe flags

# For Windows, DirectShow might require additional dependencies in the future
# [target.'cfg(target_os = "windows")'.dependencies]
# winapi = { version = "0.3", features = ["winuser", "winmm"] }

